# multi-agent-insurance-claims-workflow

./: .env.example  .gitattributes  .gitignore  claude.md  pyproject.toml  requirements.txt
.claude/: settings.json
.claude/hooks/: check-env.sh  protect-data.sh
.claude/skills/check-backend/: SKILL.md
.claude/skills/reset-data/: SKILL.md
.claude/skills/seed/: SKILL.md
.claude/skills/submit-claim/: SKILL.md
.claude/skills/test/: SKILL.md
configs/: base.yaml
configs/countries/: india.yaml  us.yaml
docs/: DECISIONS.md
src/: config.py  llm.py  utils.py
src/models/: claim.py  schemas.py  state.py
src/security/: audit_log.py  pii_masker.py
