[project]
name = "smart-claims-processor"
version = "0.1.0"
description = "AI-powered insurance claims processor"
requires-python = ">=3.12,<3.13"

dependencies = [
    # Core LangGraph + LangChain
    "langgraph>=1.1.6",
    "langgraph-checkpoint-sqlite>=3.0.3",
    "langchain>=1.2.15",
    "langchain-core>=1.2.28",
    "langchain-google-genai>=4.2.1",

    # CrewAI
    "crewai>=1.14.1",

    # LLM Providers
    "google-genai>=1.73.0",
    "langchain-groq>=1.1.2",

    # Validation
    "pydantic>=2.11.9,<2.12.0",

    # API
    "fastapi>=0.135.3",
    "uvicorn[standard]>=0.44.0",
    "sqlmodel>=0.0.38",
    "python-jose[cryptography]>=3.5.0",
    "bcrypt>=4.2.0,<5.0.0",
    "email-validator>=2.3.0",

    # Memory
    "chromadb>=1.1.0,<1.2.0",
    "sentence-transformers>=4.0.0,<6.0.0",

    # Config
    "pyyaml>=6.0.3",
    "python-dotenv>=1.1.1,<1.2.0",

    # Testing
    "pytest>=8.3.0,<10.0.0",
]